--- a/src/_component/panel/panel.scss
+++ b/src/_component/panel/panel.scss
@@ -24,13 +24,14 @@
     width: 460px;
     background-color: $silver-chalice;
     border-radius: $border-radius;
+    position: relative;
 
     &:before, 
     &:after {
         content:"";
         position: absolute;
-        top: 164px;
-        left: 554px;
+        top: 150px;
+        left: 10px;
         width: 440px;
         height: 1px;
         transform: skewY(32deg);
