Change a color when the button is focused

--- a/src/_component/panel/panel.scss
+++ b/src/_component/panel/panel.scss
@@ -17,6 +17,11 @@
     padding: 5px 10px;
     border-radius: $border-radius;
     color: $color-white;
+
+    &:focus {
+        background-color: $color-white;
+        color: $cinnabar;
+    }
 }
 
 .panel__image {
