Create a components for the floating box and start styling it

--- a/src/_component/config/color.scss
+++ b/src/_component/config/color.scss
@@ -3,3 +3,6 @@ $san-marino: #3b72a0;
 $silver-chalice: #a09f9f;
 $cinnabar: #e5493d;
 $color-white: #fff;
+$emperor: #535353;
+$boulder: #777777;
+$dusty-gray: #979797;
