--- a/src/index.pug
+++ b/src/index.pug
@@ -7,4 +7,5 @@ html(lang="en")
         title Panel
         link(rel="stylesheet", href="style.css")
     body
+        include _component/floating-box/floating-box
         include _component/panel/panel
