--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,6 @@
 @import '_component/config/color';
 @import '_component/config/variable';
 @import '_component/panel/panel';
+@import '_component/floating-box/floating-box';
+@import '_component/floating-box-square-button/floating-box-square-button';
+@import '_component/floating-box-long-button/floating-box-long-button';
