--- a/src/_component/floating-box/floating-box.pug
+++ b/src/_component/floating-box/floating-box.pug
@@ -2,25 +2,25 @@
     const squareButtonList = [
         {
             label: "new project",
-            icon: "asfdvf"
+            icon: "pfb-plus"
         },
         {
             label: "open project",
-            icon: "asfdvf"
+            icon: "pfb-folder-open"
         },
         {
             label: "import project",
-            icon: "asfdvf"
+            icon: "pfb-download2"
         },
     ]
     const longButtonList = [
         {
             label: "create outstanding AR experiences with our easy-to-follow tutorials.",
-            icon: "asfdvf"
+            icon: "pfb-book"
         },
         {
             label: "what's new with Studio.",
-            icon: "asfdvf"
+            icon: "pfb-gift"
         },
     ]
 
