--- a/src/_component/panel/panel.pug
+++ b/src/_component/panel/panel.pug
@@ -1,7 +1,7 @@
 .panel
     .panel__column
         h1 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, perspiciatis.
-        p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum ducimus earum quod ipsa reprehenderit pariatur porro commodi excepturi alias quis, voluptates odio aut, est tenetur, similique cum tempore odit doloribus.
+        p.panel__p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum ducimus earum quod ipsa reprehenderit pariatur porro commodi excepturi alias quis, voluptates odio aut, est tenetur, similique cum tempore odit doloribus.
         //- button.panel__button have a look
     .panel__column
         .panel__image-wrapper
