--- a/src/_component/config/variable.scss
+++ b/src/_component/config/variable.scss
@@ -1,1 +1,10 @@
 $border-radius: 4px;
+%box-shadow{
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
