--- a/src/_component/floating-box-long-button/floating-box-long-button.pug
+++ b/src/_component/floating-box-long-button/floating-box-long-button.pug
@@ -1,5 +1,5 @@
 .floating-box__long-button
-    .floating-box__long-icon
+    .floating-box__long-icon(class=longButton.icon)
     .floating-box__long-label=longButton.label
     
     
