--- a/src/_component/floating-box-square-button/floating-box-square-button.scss
+++ b/src/_component/floating-box-square-button/floating-box-square-button.scss
@@ -2,13 +2,20 @@
     display: flex;
     color: $color-white;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 10px;
     height: 106px;
     width: 123px;
     border-radius: $border-radius;
     border: 1px solid $color-white;
-    justify-content: center;
-    align-items: space-around;
+    justify-content: space-evenly;
+    align-items: center;
     background: $boulder;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
+    flex-direction: column;
+
+    @extend %box-shadow;
+}
+
+.floating-box__square-icon{
+    font-size: 1.5rem;
 }
