--- a/src/_component/floating-box/floating-box.pug
+++ b/src/_component/floating-box/floating-box.pug
@@ -1,35 +1,9 @@
--
-    const squareButtonList = [
-        {
-            label: "new project",
-            icon: "pfb-plus"
-        },
-        {
-            label: "open project",
-            icon: "pfb-folder-open"
-        },
-        {
-            label: "import project",
-            icon: "pfb-download2"
-        },
-    ]
-    const longButtonList = [
-        {
-            label: "create outstanding AR experiences with our easy-to-follow tutorials.",
-            icon: "pfb-book"
-        },
-        {
-            label: "what's new with Studio.",
-            icon: "pfb-gift"
-        },
-    ]
-
 .floating-box
     .floating-box__square-button-wrapper
-        each squareButton in squareButtonList
+        each squareButton in data["button-list"].squareButtonList
             include ../floating-box-square-button/floating-box-square-button
 
     hr.floating-box__hr
     .floating-box__long-button-wrapper
-        each longButton in longButtonList
+        each longButton in data["button-list"].longButtonList
             include ../floating-box-long-button/floating-box-long-button
