Make pointers for a buttons and make buttons for the second test

--- a/src/_component/floating-box-long-button/floating-box-long-button.pug
+++ b/src/_component/floating-box-long-button/floating-box-long-button.pug
@@ -1,4 +1,4 @@
-.floating-box__long-button
+button.floating-box__long-button
     .floating-box__long-icon(class=longButton.icon)
     .floating-box__long-label=longButton.label
     
