--- a/src/_component/floating-box-square-button/floating-box-square-button.pug
+++ b/src/_component/floating-box-square-button/floating-box-square-button.pug
@@ -1,3 +1,3 @@
-.floating-box-square-button
+button.floating-box-square-button
     .floating-box__square-icon(class=squareButton.icon)
     .floating-box__square-label=squareButton.label
