--- a/src/_component/floating-box-square-button/floating-box-square-button.scss
+++ b/src/_component/floating-box-square-button/floating-box-square-button.scss
@@ -10,8 +10,8 @@
     justify-content: space-evenly;
     align-items: center;
     background: $boulder;
-    // flex-wrap: wrap;
     flex-direction: column;
+    cursor: pointer;
 
     @extend %box-shadow;
 }
