--- a/src/_component/panel/panel.scss
+++ b/src/_component/panel/panel.scss
@@ -25,6 +25,7 @@
     border-radius: $border-radius;
     color: $color-white;
     margin: 1rem 0;
+    cursor: pointer;
 
     &:focus {
         background-color: $color-white;
